--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,8 +1,5 @@
 <resources>
-
-    <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
@@ -10,10 +7,10 @@
 
     <style name="AppTheme.Dark" parent="Theme.AppCompat.DayNight.DarkActionBar">
         <item name="colorAccent">@color/colorPrimary</item>
-        <item name="android:colorBackground">@android:color/background_material_dark</item>
-        <item name="android:colorForeground">@android:color/foreground_material_dark</item>
-        <item name="android:windowBackground">@android:color/background_dark</item>
-        <item name="android:textColorPrimary">@android:color/foreground_material_dark</item>
+        <item name="android:colorBackground">@color/colorBackgroundDark</item>
+        <item name="android:colorForeground">@color/colorForegroundDark</item>
+        <item name="android:windowBackground">@color/colorBackgroundDark</item>
+        <item name="android:textColorPrimary">@color/colorForegroundDark</item>
         <item name="android:colorButtonNormal">@color/colorFocusDark</item>
     </style>
 </resources>
