--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,9 @@
     <color name="colorPrimary">#4CAF50</color>
     <color name="colorPrimaryDark">#43a047</color>
     <color name="colorAccent">@color/colorPrimaryDark</color>
+    <color name="colorStatusBarDark">#000000</color>
+    <color name="colorAppBarDark">#212121</color>
+    <color name="colorBackgroundDark">#303030</color>
     <color name="colorFocusDark">#424242</color>
+    <color name="colorForegroundDark">#FFFFFF</color>
 </resources>
