--- a/app/src/main/res/menu/menu_dashboard.xml
+++ b/app/src/main/res/menu/menu_dashboard.xml
@@ -3,8 +3,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="ch.notli.notli.DashboardActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/actionSettings"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="@string/actionSettings"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/actionAddSemester"
+        android:orderInCategory="100"
+        android:title="@string/actionAddSemester"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/actionAddSubject"
+        android:orderInCategory="100"
+        android:title="@string/actionAddSubject"
         app:showAsAction="never" />
 </menu>
