--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,8 +34,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:padding="8dp"
-                    android:src="@mipmap/ic_launcher_foreground" />
+                    android:layout_marginLeft="12dp"
+                    android:src="@drawable/ic_logo" />
 
             </LinearLayout>
 
