--- a/app/src/main/res/layout/activity_add_edit_grade.xml
+++ b/app/src/main/res/layout/activity_add_edit_grade.xml
@@ -9,31 +9,31 @@
 
     <Spinner
         android:id="@+id/semesterSpinner"
-        android:layout_width="368dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="32dp" />
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="32dp"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Spinner
         android:id="@+id/subjectSpinner"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/semesterSpinner"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
+        app:layout_constraintTop_toBottomOf="@+id/semesterSpinner" />
 
     <Spinner
         android:id="@+id/weightSpinner"
@@ -97,34 +97,32 @@
 
     <TextView
         android:id="@+id/dateTextView"
-        android:layout_width="137dp"
+        android:layout_width="80dp"
         android:layout_height="50dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="20dp"
         android:text="@string/text_activity_addGrade_date"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/themaTextView" />
+        app:layout_constraintTop_toBottomOf="@+id/themaTextView"
+        tools:layout_editor_absoluteY="210dp" />
 
     <TextView
         android:id="@+id/themaTextView"
-        android:layout_width="137dp"
+        android:layout_width="80dp"
         android:layout_height="50dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
         android:text="@string/text_activity_addEditGrade_thema"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/subjectSpinner" />
+        app:layout_constraintTop_toBottomOf="@+id/subjectSpinner"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <EditText
         android:id="@+id/editText6"
-        android:layout_width="wrap_content"
+        android:layout_width="286dp"
         android:layout_height="50dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginTop="32dp"
         android:ems="10"
         android:inputType="textPersonName"
@@ -138,18 +136,19 @@
         android:onClick="showDatePickerDialog"
         android:layout_marginTop="20dp"
         app:layout_constraintTop_toBottomOf="@+id/editText6"
-        android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent" />
 
     <EditText
         android:id="@+id/editText7"
-        android:layout_width="128dp"
+        android:layout_width="198dp"
         android:layout_height="50dp"
+        android:layout_marginRight="0dp"
         android:layout_marginTop="20dp"
         android:ems="10"
         android:inputType="date"
-        app:layout_constraintTop_toBottomOf="@+id/editText6"
         app:layout_constraintRight_toLeftOf="@+id/button3"
-        android:layout_marginRight="0dp" />
+        app:layout_constraintTop_toBottomOf="@+id/editText6"
+        tools:layout_editor_absoluteX="99dp"
+        tools:layout_editor_absoluteY="204dp" />
 
 </android.support.constraint.ConstraintLayout>
