--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -6,6 +6,6 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="ch.notli.notli.MainActivity$PlaceholderFragment">
+    tools:context="ch.notli.notli.Activitys.MainActivity$PlaceholderFragment">
 
 </RelativeLayout>
