--- a/app/src/main/res/layout/activity_add_edit_grade.xml
+++ b/app/src/main/res/layout/activity_add_edit_grade.xml
@@ -9,7 +9,7 @@
 
     <Spinner
         android:id="@+id/semesterSpinner"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
@@ -23,7 +23,7 @@
 
     <Spinner
         android:id="@+id/subjectSpinner"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
@@ -99,19 +99,16 @@
         android:id="@+id/dateTextView"
         android:layout_width="80dp"
         android:layout_height="50dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="20dp"
         android:text="@string/text_activity_addGrade_date"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/themaTextView"
-        tools:layout_editor_absoluteY="210dp" />
+        app:layout_constraintTop_toBottomOf="@+id/themaTextView" />
 
     <TextView
         android:id="@+id/themaTextView"
         android:layout_width="80dp"
         android:layout_height="50dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
         android:text="@string/text_activity_addEditGrade_thema"
@@ -142,13 +139,10 @@
         android:id="@+id/editText7"
         android:layout_width="198dp"
         android:layout_height="50dp"
-        android:layout_marginRight="0dp"
         android:layout_marginTop="20dp"
         android:ems="10"
         android:inputType="date"
         app:layout_constraintRight_toLeftOf="@+id/button3"
-        app:layout_constraintTop_toBottomOf="@+id/editText6"
-        tools:layout_editor_absoluteX="99dp"
-        tools:layout_editor_absoluteY="204dp" />
+        app:layout_constraintTop_toBottomOf="@+id/editText6" />
 
 </android.support.constraint.ConstraintLayout>
