--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -7,7 +7,7 @@
         android:id="@+id/settings"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:name="ch.notli.notli.SettingsFragment">
+        android:name="ch.notli.notli.view.SettingsFragment">
 
     </fragment>
 
