--- a/app/src/main/res/layout/content_settings_fragment.xml
+++ b/app/src/main/res/layout/content_settings_fragment.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="ch.notli.notli.SettingsFragment"
+    tools:context="ch.notli.notli.view.SettingsFragment"
     tools:showIn="@layout/activity_settings_fragment">
 
 </android.support.constraint.ConstraintLayout>
