--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="ch.notli.notli.Activitys.MainActivity$PlaceholderFragment">
+    tools:context="ch.notli.notli.view.MainActivity$PlaceholderFragment">
 
     <com.github.mikephil.charting.charts.BarChart
         android:id="@+id/barChart"
